# web-site/backend/aid-web-backend/src/api/httpAPI/v1HTTPAPI/file_manager.api.go
@@ -19,17 +19,18 @@ import (
 
 type FileManagerAPI struct{}
 
-// Upload       上传单个文件
-// @Tags        文件管理
-// @Summary     上传文件
+// Upload 上传单个文件
+// @Tags 文件管理
+// @Summary 上传文件
 // @Description 上传单个文件到指定路径
-// @Produce     application/json,application/xml,application/x-yaml,application/toml
-// @Accept      multipart/form-data
-// @Router      /fileManager/upload [post]
-// @Param       path	query	string	true	"上传路径"
-// @Param       file	formData	file	true	"上传文件内容"
-// @Success     200	{object}	httpModule.HTTPResponse{content=response.FileUploadResponse}	"上传成功"
-// @Failure     403	{object}	httpModule.HTTPResponse	"获取上传文件失败"
+// @Produce application/json,application/xml,application/x-yaml,application/toml
+// @Accept multipart/form-data
+// @Router /fileManager/upload [post]
+// @Param path query string true "上传路径"
+// @Param file formData file true "上传文件内容"
+// @Success 200 {object} httpModule.HTTPResponse{content=response.FileUploadResponse} "上传成功"
+// @Failure 422 {object} httpModule.HTTPResponse "表单验证失败"
+// @Failure 403 {object} httpModule.HTTPResponse "获取上传文件失败"
 func (*FileManagerAPI) Upload(c *gin.Context) {
 	var (
 		title = "上传文件"
@@ -41,7 +42,7 @@ func (*FileManagerAPI) Upload(c *gin.Context) {
 	// 获取上传的文件
 	if file, err = c.FormFile("file"); err != nil {
 		global.LOG.Error(title, zap.Errors("接收文件", []error{err}))
-		httpModule.NewForbidden(httpModule.Errorf("获取上传文件失败：%w", err)).WithAccept(c)
+		httpModule.NewUnprocessableEntity(httpModule.Errorf("获取上传文件失败：%w", err)).WithAccept(c)
 		return
 	}
 
@@ -62,7 +63,7 @@ func (*FileManagerAPI) Upload(c *gin.Context) {
 	}
 
 	global.LOG.Info(title, zap.Any("成功", ""))
-	httpModule.NewOK(
+	httpModule.NewCreated(
 		httpModule.Msg("文件上传成功"),
 		httpModule.Content(response.FileUploadResponse{
 			FileName:    file.Filename,
@@ -75,15 +76,16 @@ func (*FileManagerAPI) Upload(c *gin.Context) {
 }
 
 // List 列出上传的文件
-// @Tags        文件管理
-// @Summary     获取文件列表
+// @Tags 文件管理
+// @Summary 获取文件列表
 // @Description 按路径获取当前目录文件/目录列表
-// @Produce     application/json
-// @Accept      application/json
-// @Param       data	body	request.FileListRequest	true	"请求参数"
-// @Router      /fileManager/list	[post]
-// @Success     200	{object}	httpModule.HTTPResponse{content=response.FileListResponse}	"获取成功"
-// @Failure     403	{object}	httpModule.HTTPResponse	"获取失败"
+// @Produce application/json,application/xml,application/x-yaml,application/toml
+// @Accept application/json
+// @Param data body request.FileListRequest true "请求参数"
+// @Router /fileManager/list [post]
+// @Success 200 {object} httpModule.HTTPResponse{content=response.FileListResponse} "获取成功"
+// @Failure 422 {object} httpModule.HTTPResponse "表单验证失败"
+// @Failure 403 {object} httpModule.HTTPResponse "获取失败"
 func (*FileManagerAPI) List(c *gin.Context) {
 	type FilesystemerItem struct {
 		Path string `json:"path"`
@@ -104,7 +106,7 @@ func (*FileManagerAPI) List(c *gin.Context) {
 
 	if form, checker = validatorV3.WithGin[request.FileListRequest](c); !checker.OK() {
 		global.LOG.Error(title, zap.Any(global.ST_BIND_FORM, checker.Wrongs()))
-		httpModule.NewForbidden(httpModule.Content(checker.Wrongs()), httpModule.Errorf(global.FE_IVALIDED_FORM, checker.Wrong())).WithAccept(c)
+		httpModule.NewUnprocessableEntity(httpModule.Content(checker.Wrongs()), httpModule.Errorf(global.FE_IVALIDED_FORM, checker.Wrong())).WithAccept(c)
 		return
 	}
 
@@ -140,6 +142,7 @@ func (*FileManagerAPI) List(c *gin.Context) {
 // @Param       data  body      request.FileStoreFolderRequest  true  "请求参数"
 // @Router      /fileManager/storeFolder [post]
 // @Success     200   {object}  httpModule.HTTPResponse  "创建成功"
+// @Failure     422 {object} httpModule.HTTPResponse "表单验证失败"
 // @Failure     403   {object}  httpModule.HTTPResponse  "创建文件夹失败"
 func (*FileManagerAPI) StoreFolder(c *gin.Context) {
 	var (
@@ -152,7 +155,7 @@ func (*FileManagerAPI) StoreFolder(c *gin.Context) {
 
 	if form, checker = validatorV3.WithGin[request.FileStoreFolderRequest](c); !checker.OK() {
 		global.LOG.Error(title, zap.Any(global.ST_BIND_FORM, checker.Wrongs()))
-		httpModule.NewForbidden(httpModule.Content(checker.Wrongs()), httpModule.Errorf(global.FE_IVALIDED_FORM, checker.Wrong())).WithAccept(c)
+		httpModule.NewUnprocessableEntity(httpModule.Content(checker.Wrongs()), httpModule.Errorf(global.FE_IVALIDED_FORM, checker.Wrong())).WithAccept(c)
 		return
 	}
 
@@ -167,15 +170,16 @@ func (*FileManagerAPI) StoreFolder(c *gin.Context) {
 	httpModule.NewOK(httpModule.Msg("创建成功")).WithAccept(c)
 }
 
-// Delete   删除文件或目录
-// @Tags    文件管理
+// Delete 删除文件或目录
+// @Tags 文件管理
 // @Summary 删除文件或目录
-// @Produce application/json
-// @Accept  application/json
-// @Param   data	body	request.FileDestroyRequest	true	"请求参数"
-// @Router  /api/v1/fileManger/destroy	[post]
-// @Success	200	{object}	httpModule.HTTPResponse	"删除成功"
-// @Failure 403	{object}	httpModule.HTTPResponse	"删除失败"
+// @Produce application/json,application/xml,application/x-yaml,application/toml
+// @Accept application/json
+// @Param data body request.FileDestroyRequest true "请求参数"
+// @Router /api/v1/fileManger/destroy [post]
+// @Success 200 {object} httpModule.HTTPResponse "删除成功"
+// @Failure 422 {object} httpModule.HTTPResponse "表单验证失败"
+// @Failure 403 {object} httpModule.HTTPResponse "删除失败"
 func (*FileManagerAPI) Destroy(c *gin.Context) {
 	var (
 		title        = "删除文件或目录"
@@ -187,7 +191,7 @@ func (*FileManagerAPI) Destroy(c *gin.Context) {
 
 	if form, checker = validatorV3.WithGin[request.FileDestroyRequest](c); !checker.OK() {
 		global.LOG.Error(title, zap.Any(global.ST_BIND_FORM, checker.Wrongs()))
-		httpModule.NewForbidden(httpModule.Content(checker.Wrongs()), httpModule.Errorf(global.FE_IVALIDED_FORM, checker.Wrong())).WithAccept(c)
+		httpModule.NewUnprocessableEntity(httpModule.Content(checker.Wrongs()), httpModule.Errorf(global.FE_IVALIDED_FORM, checker.Wrong())).WithAccept(c)
 		return
 	}
 
@@ -208,15 +212,16 @@ func (*FileManagerAPI) Destroy(c *gin.Context) {
 }
 
 // Download 下载文件
-// @Tags    文件管理
+// @Tags 文件管理
 // @Summary 下载文件
 // @Produce application/octet-stream
-// @Accept  application/json
-// @Param   path	query	string	true	"文件路径"
-// @Param   name	query	string	true	"文件名"
-// @Router  /fileManager/download	[get]
-// @Success 200	{file}	file	"下载成功"
-// @Failure 403	{object}	httpModule.HTTPResponse	"下载失败"
+// @Accept application/json
+// @Param path query string true "文件路径"
+// @Param name query string true "文件名"
+// @Router /fileManager/download [get]
+// @Success 200 {file} file "下载成功"
+// @Failure 422 {object} httpModule.HTTPResponse "表单验证失败"
+// @Failure 403 {object} httpModule.HTTPResponse "下载失败"
 func (*FileManagerAPI) Download(c *gin.Context) {
 	var (
 		dir  filesystemV4.Filesystemer
@@ -235,14 +240,16 @@ func (*FileManagerAPI) Download(c *gin.Context) {
 }
 
 // Zip 压缩文件或目录
-// @Tags        文件管理
-// @Summary     压缩文件或目录
-// @Produce     application/json
-// @Accept      application/json
-// @Param       data	body	request.FileZipRequest	true	"请求参数"
-// @Router      /fileManager/zip	[post]
-// @Success     200	{object}	httpModule.HTTPResponse	"压缩成功"
-// @Failure     403	{object}	httpModule.HTTPResponse	"压缩失败"
+// @Tags 文件管理
+// @Summary 压缩文件或目录
+// @Produce application/json,application/xml,application/x-yaml,application/toml
+// @Accept application/json
+// @Param data body request.FileZipRequest true "请求参数"
+// @Router /fileManager/zip [post]
+// @Success 200 {object} httpModule.HTTPResponse{content=response.FileZipResponse} "压缩成功"
+// @Failure 422 {object} httpModule.HTTPResponse "表单验证失败"
+// @Failure 403 {object} httpModule.HTTPResponse "压缩失败"
+// @Failure 404 {object} httpModule.HTTPResponse "获取路径错误"
 func (*FileManagerAPI) Zip(c *gin.Context) {
 	var (
 		title                = "压缩文件或目录"
@@ -254,7 +261,7 @@ func (*FileManagerAPI) Zip(c *gin.Context) {
 
 	if form, checker = validatorV3.WithGin[request.FileZipRequest](c); !checker.OK() {
 		global.LOG.Error(title, zap.Any(global.ST_BIND_FORM, checker.Wrongs()))
-		httpModule.NewForbidden(httpModule.Content(checker.Wrongs()), httpModule.Errorf(global.FE_IVALIDED_FORM, checker.Wrong())).WithAccept(c)
+		httpModule.NewUnprocessableEntity(httpModule.Content(checker.Wrongs()), httpModule.Errorf(global.FE_IVALIDED_FORM, checker.Wrong())).WithAccept(c)
 		return
 	}
 
@@ -272,5 +279,5 @@ func (*FileManagerAPI) Zip(c *gin.Context) {
 	}
 
 	global.LOG.Info(title, zap.String("成功", zipped.GetFullPath()))
-	httpModule.NewOK(httpModule.Msg("压缩成功"), httpModule.Content(gin.H{"name": zipped.GetName()})).WithAccept(c)
+	httpModule.NewOK(httpModule.Msg("压缩成功"), httpModule.Content(response.FileZipResponse{Name: zipped.GetName()})).WithAccept(c)
 }
